--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,11 +58,10 @@
               </form>
               <ul class="user_option navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{login}"> <img src="images/login.png" alt=""> <span>Login</span> </a>
+                  <a class="nav-link" th:href="@{/login}"> <img src="images/login.png" alt=""> <span>Login</span> </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"> <img src="images/register.png" alt="">
-                    <span>Register</span></a>
+                  <a class="nav-link" th:href="@{/signup}"> <img src="images/register.png" alt=""> <span>Register</span></a>
                 </li>
               </ul>
             </div>
