--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 	<!--Custom styles-->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 <body>
 <div class="container">
@@ -46,11 +46,11 @@
 					</div>
 				</form>
                 <div class="d-flex justify-content-center">
-                    <a href="#">Forgot your password?</a>
+                    <a th:href="@{/forgotpass}">Forgot your password?</a>
                 </div>
                 <br>
                 <div class="d-flex justify-content-center links">
-                    Don't have an account?<a href="#">Sign Up</a>
+                    Don't have an account?<a th:href="@{/signup}">Sign Up</a>
                 </div>
 			</div>
           
@@ -60,7 +60,8 @@
 
 			</div>
             <div class="d-flex justify-content-center social_icon">
-                <span><i class="fab fa-facebook-square"></i></span>
+        
+                <span><a href=https://www.facebook.com class="fab fa-facebook-square"></a></span>
                 <span><i class="fab fa-google-plus-square"></i></span>
                 <span><i class="fab fa-twitter-square"></i></span>
             </div>
