--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 </head>
 
 <body class="bg-gradient-primary">
-
+<form action="#" th:action="@{/adminhome}"  method="post">
     <div class="container">
 
         <!-- Outer Row -->
@@ -41,15 +41,21 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                   
+                                    
+                                    
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                        <label for="username" class="col-form-label">Username</label> 
+                                            <input 
+                                            type="text" class="form-control form-control-user"
+                                                name = "username" id="username" 
+                                                placeholder="Enter Username">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                        <label for="password" class="col-form-label">Email</label> 
+                                            <input 
+                                            type="password" class="form-control form-control-user"
+                                                id="password" name = "password" placeholder="Password">
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -58,9 +64,9 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a th:href="@{/adminhome}" class="btn btn-primary btn-user btn-block">
-                                            Login
-                                        </a>
+                                        <input type = "submit" value = "Login" class="btn btn-primary btn-user btn-block" name = "action">
+                                         
+                                        
                                         <hr>
                                         <a href="index.html" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Login with Google
@@ -68,7 +74,7 @@
                                         <a href="index.html" class="btn btn-facebook btn-user btn-block">
                                             <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                                         </a>
-                                    </form>
+                                    
                                     <hr>
                                     <div class="text-center">
                                         <a class="small" href="forgot-password.html">Forgot Password?</a>
@@ -76,6 +82,7 @@
                                     <div class="text-center">
                                         <a class="small" href="register.html">Create an Account!</a>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -87,6 +94,7 @@
         </div>
 
     </div>
+    </form>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
