--- a/src/main/resources/templates/job.html
+++ b/src/main/resources/templates/job.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Edeedjob</title>
+  <title>Data Portal</title>
 
 
 
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
             <span>
-              Edeedjob
+             Data Portal
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" th:href="@{/candidatelogin}">Home <span class="sr-only">(current)</span></a>
                 </li>
              <!--    <li class="nav-item">
                   <a class="nav-link" href="job.html"> Jobs </a>
@@ -58,12 +58,9 @@
               </form>
               <ul class="user_option navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/login}"> <img src="images/login.png" alt=""> <span>Login</span> </a>
+                  <a class="nav-link" th:href="@{/profile}"> <img src="images/login.png" alt=""> <span>Profile</span> </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> <img src="images/register.png" alt="">
-                    <span>Register</span></a>
-                </li>
+
               </ul>
             </div>
           </div>
@@ -467,15 +464,6 @@
 
   <!-- end info_section -->
 
-
-  <!-- footer section -->
-  <footer class="container-fluid footer_section">
-    <p>
-      &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </footer>
-  <!-- footer section -->
 
 
   <script src="js/jquery-3.4.1.min.js"></script>
