--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,6 +44,11 @@
 					<div class="form-group text-center">
 						<a th:href="@{/adminhome}" class="btn btn-primary btn-user"> Login </a>
 					</div>
+					
+					<div class="form-group text-center">
+						<a th:href="@{/candidatelogin}" class="btn btn-primary btn-user"> candidate Login </a>
+					</div>
+				
 				</form>
                 <div class="d-flex justify-content-center">
                     <a th:href="@{/forgotpass}">Forgot your password?</a>
