--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Breeze Admin</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="assets/vendors/flag-icon-css/css/flag-icon.min.css" />
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css" />
@@ -358,7 +358,7 @@
                             <h2 class="text-white">25 <span class="h5">50</span>
                             </h2>
                           </div>
-                          <i class="card-icon-indicator mdi mdi-cube-outline bg-inverse-icon-danger"></i>
+                          <i class="card-icon-indicator mdi mdi-cube-outline bg-inverse-icon-danger"></i> 
                         </div>
                        <!-- <h6 class="text-white">13.21% Since last month</h6>-->
                       </div>
@@ -430,7 +430,7 @@
                               <div>
                                 <h3 class="m-0 survey-value">100</h3>
 
-                                <p class="text-success m-0">-310 avg. sales</p>
+                          <!--      <p class="text-success m-0">-310 avg. sales</p> -->
                               </div>
                               <div id="earningChart" class="flot-chart"></div>
                             </div>
@@ -446,7 +446,7 @@
                               <div>
                                 <h3 class="m-0 survey-value">25</h3>
 
-                                <p class="text-danger m-0">-310 avg. sales</p>
+                           <!--     <p class="text-danger m-0">-310 avg. sales</p> -->
                               </div>
                               <div id="productChart" class="flot-chart"></div>
                             </div>
@@ -462,7 +462,7 @@
                               <div>
                                 <h3 class="m-0 survey-value">50</h3>
 
-                                <p class="text-success m-0">-310 avg. sales</p>
+                          <!--      <p class="text-success m-0">-310 avg. sales</p> -->
                               </div>
                               <div id="orderChart" class="flot-chart"></div>
                             </div>
@@ -647,7 +647,7 @@
             
             
 
-            <div class="row">
+      <!--      <div class="row">
               <div class="col-xl-4 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
@@ -691,7 +691,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div>  -->
               <div class="col-xl-4 col-md-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
@@ -781,7 +781,7 @@
                 </div>
               </div>
 
-             <div class="col-xl-4 col-md-6 grid-margin stretch-card">
+        <!--     <div class="col-xl-4 col-md-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title text-black">Business Survey</h4>
@@ -818,7 +818,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>  -->
             <div class="row">
               <div class="col-xl-8 grid-margin stretch-card">
                 <div class="card card-calender">
@@ -942,7 +942,7 @@
               <div class="col-xl-4 col-md-6 grid-margin stretch-card">
                 <div class="card card-invoice">
                   <div class="card-body">
-                    <h4 class="card-title pb-3">Pending invoices</h4>
+                    <h4 class="card-title pb-3">Pending Candidates</h4>
                     <div class="list-card">
                       <div class="row align-items-center">
                         <div class="col-7 col-sm-8">
@@ -1084,14 +1084,17 @@
                     </div>
                   </div>
                 </div>
+                
               </div>
-              <div class="col-xl-4 col-md-6 grid-margin stretch-card">
+              <div class="col-xl-5 col-md-6 grid-margin stretch-card">
                 <!--datepicker-->
                 <div class="card">
                   <div class="card-body">
                     <div id="inline-datepicker" class="datepicker table-responsive"></div>
                   </div>
                 </div>
+                
+                
                 <!--datepicker ends-->
               </div>
               <div class="col-xl-4 col-md-6 stretch-card grid-margin stretch-card">
@@ -1160,13 +1163,13 @@
               </div>
             </div>
           </div>
-          <footer class="footer">
+      <!--    <footer class="footer">
             <div class="d-sm-flex justify-content-center justify-content-sm-between">
               <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
               <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap dashboard template</a> from Bootstrapdash.com</span>
             </div>
-          </footer>
-        </div>
+          </footer> 
+        </div> -->
         <!-- main-panel ends -->
       </div>
       <!-- page-body-wrapper ends -->
