--- a/src/main/resources/templates/admin/pages/pannel/pannel.html
+++ b/src/main/resources/templates/admin/pages/pannel/pannel.html
@@ -1,7 +1,108 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>Pannels</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+	integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+	crossorigin="anonymous">
+<!-- <link rel="stylesheet" href="../css/shards.min.css"> -->
 </head>
 <body>
-<h1>Pnnel Form</h1>
+	<div class="container my-2">
+		<div class="card">
+			<div class="card-body">
+				<div th:switch="${pannels}" class="container my-5">
+					<p  class="my-5">
+					<!--	<a style = "float:left; margin-bottom: 10px" href="/students/panneladd" class="btn btn-primary"><i
+							class="fas fa-user-plus ml-2"> Add New Pannel</i></a> -->
+							<a href="/panneladd" class="btn btn-primary"><i
+							class="fas fa-user-plus ml-2"> Add Pannels</i></a>
+					</p>
+					<br>
+					<br>
+					<div class="col-md-10">
+						<h2 th:case="null">No Pannels yet!</h2>
+						<div th:case="*">
+						<div>
+				<!--		<form th:action="@{controller}" method="get">
+						Search by
+						<label style="font-size: 500x; font-family: bold; float: right;" for="field" class="col-form-label"></label>
+                                    <select id="field" name="field">
+                                     <option  value="Select">Select</option>
+									 <option  value="name">Name</option>
+                                     <option  value="address"> Address</option>
+                                     <option  value="email">Email</option>
+                                     <option  value="phoneNo">Phoneno</option>
+                                     <option  value="alternatePhoneNo">AlternatePhoneNo</option>
+                                     <option  value="status">Status</option>
+                                     
+                                    </select>
+						<input style="float: right;" type="button" value="clear" />
+						<input style="float: right;" type="submit" value="search" />
+						<input style="float: right;" id="textsearch" type="text" name="keyword" />
+						
+						</form> -->
+						</div>
+							<table class="table table-striped table-responsive-md">
+								<thead>
+									<tr>
+										<th>UserId</th>
+										<th>Password</th>
+										<th>Edit</th>
+										<th>Delete</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="pannel : ${pannels}">
+										<td th:text="${pannel.userId}"></td>
+										<td th:text="${pannel.password}"></td>
+										<td><a th:href="@{/students/panneledit/{id}(id=${pannel.id})}"
+											class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
+										<td><a th:href="@{/students/panneldelete/{id}(id=${pannel.id})}"
+											class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+									</tr>
+								</tbody>
+							</table>
+							
+		<!--	<div th:if = "${totalPages > 1}">
+			<div class = "row col-sm-10">
+				<div class = "col-sm-7">
+					Total Candidates: [[${totalItems}]] 
+				</div>
+				<div class = "col-sm-2">
+					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}}">[[${i}]]</a>
+						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
+					</span>
+				</div>
+				<div class = "col-sm-1">
+					<a style="float:left;" th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}}">Next</a>
+					<span th:unless="${currentPage < totalPages}">Next </span>
+				</div>
+
+				 <div class="col-sm-1">
+    				<a style="float: right;"th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}}">Last</a>
+					<span th:unless="${currentPage < totalPages}">Last </span>
+   				 </div> -->
+			</div>
+		</div>
+			<p  class="my-5">
+						<a style = "float:left; margin-bottom: 10px" href="/students/logout" class="btn btn-primary"><i
+							class="fas  ml-2"> Log out</i></a>
+					</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-</html>
+
